# immersiveportals-x-sable

./: .gitignore  README.md  REFACTOR_SPEC.md  bug1.md  build.gradle  changelog.md  gam1r_CHANGELOG.md  gradle.properties
.github/ISSUE_TEMPLATE/: bug_report.yaml
OTHERREQUIREDSOURCES/Veil-mc1.21.1-4.3.0-neoforge/: README.md  build.gradle  changelog.md  gradle.properties  runRenderdoc.sh  settings.gradle
OTHERREQUIREDSOURCES/sable-companion-main/: README.md  build.gradle.kts  gradle.properties  libs.versions.toml  settings.gradle.kts
OTHERREQUIREDSOURCES/sable-mc1.21.1-2.0.3-neoforge/: build.gradle  settings.gradle
PROFILING/: system.txt
audit/: transit-design.md
docs/: atlas_changes_from_dim_agnostic.md  atlas_portal_physics_audit_results.md  atlas_portal_physics_spec.md
natives/: Cargo.toml  build-windows.ps1  fix_import_descriptors.py
natives/engine/rapier/: Cargo.toml
natives/engine/rapier/src/dynamics/: rigid_body_components.rs  rigid_body_set.rs
natives/engine/rapier/src/dynamics/solver/contact_constraint/: contact_with_coulomb_friction.rs  contact_with_twist_friction.rs  generic_contact_constraint.rs  mod.rs
natives/engine/rapier/src/geometry/: collider.rs  collider_components.rs  collider_set.rs  contact_pair.rs  narrow_phase.rs
natives/engine/rapier/src/pipeline/: user_changes.rs
natives/rapier/: Cargo.toml
natives/rapier/src/: algo.rs  boxes.rs  buoyancy.rs  collider.rs  contraptions.rs  dispatcher.rs  event_handler.rs  groups.rs  hooks.rs  ipl_ext.rs  joints.rs  lib.rs  rope.rs  scene.rs  voxel_collider.rs
(+1089 files in other folders)
