[package]
name = "sable_rapier"
version.workspace = true
edition.workspace = true

[dependencies]
marten.workspace = true

fern.workspace = true
jni.workspace = true
colored.workspace = true
log.workspace = true
humantime.workspace = true

# IPL atlas (spec v3 M2): the engine fork is vendored — image colliders and the
# Tier-1 constraint changes live inside it. Same source as the previous git pin
# (ryanhcode/rapier @ 38e92f1) plus our diffs.
rapier3d = { path = "../engine/rapier/crates/rapier3d", features = [
    "simd-nightly",
    "parallel",
] }
#rapier3d = { version = "0.26.1", features = [ "simd-stable" ] }

rayon = "1.10.0"
dashmap = "7.0.0-rc2"

[lib]
crate-type = ["cdylib", "lib"]
name = "sable_rapier"
path = "src/lib.rs"

[[bench]]
name = "collision_benchmark"
harness = false

[dev-dependencies]
criterion = "0.8.2"
